[gd_scene load_steps=37 format=2]

[ext_resource path="res://Stages/Aurora/Aurora.gd" type="Script" id=1]
[ext_resource path="res://Stages/Aurora/Resources/main_platform.png" type="Texture" id=3]
[ext_resource path="res://Scenes/Stage/SolidPlatform.tscn" type="PackedScene" id=4]
[ext_resource path="res://Stages/Aurora/Resources/background.png" type="Texture" id=5]
[ext_resource path="res://Stages/Aurora/ShootingStarSpawner.gd" type="Script" id=7]
[ext_resource path="res://Stages/Aurora/WispSpawner.gd" type="Script" id=8]
[ext_resource path="res://Stages/Aurora/Resources/Aurora/Aurora1.png" type="Texture" id=10]
[ext_resource path="res://Stages/Aurora/Resources/Aurora/Aurora2.png" type="Texture" id=11]
[ext_resource path="res://Stages/Aurora/Resources/Aurora/Aurora4.png" type="Texture" id=12]
[ext_resource path="res://Stages/Aurora/Resources/Aurora/Aurora3.png" type="Texture" id=13]
[ext_resource path="res://Stages/Aurora/Resources/Aurora/Aurora5.png" type="Texture" id=14]
[ext_resource path="res://Stages/Aurora/Resources/Aurora/Aurora10.png" type="Texture" id=15]
[ext_resource path="res://Stages/Aurora/Resources/Aurora/Aurora14.png" type="Texture" id=16]
[ext_resource path="res://Stages/Aurora/Resources/Aurora/Aurora15.png" type="Texture" id=17]
[ext_resource path="res://Stages/Aurora/Resources/Aurora/Aurora17.png" type="Texture" id=18]
[ext_resource path="res://Stages/Aurora/Resources/Aurora/Aurora11.png" type="Texture" id=19]
[ext_resource path="res://Stages/Aurora/Resources/Aurora/Aurora12.png" type="Texture" id=20]
[ext_resource path="res://Stages/Aurora/Resources/Aurora/Aurora13.png" type="Texture" id=21]
[ext_resource path="res://Stages/Aurora/Resources/Aurora/Aurora16.png" type="Texture" id=22]
[ext_resource path="res://Stages/Aurora/Resources/Aurora/Aurora8.png" type="Texture" id=23]
[ext_resource path="res://Stages/Aurora/Resources/Aurora/Aurora9.png" type="Texture" id=24]
[ext_resource path="res://Stages/Aurora/Resources/Aurora/Aurora6.png" type="Texture" id=25]
[ext_resource path="res://Stages/Aurora/Resources/Aurora/Aurora7.png" type="Texture" id=26]
[ext_resource path="res://Stages/Aurora/Resources/Aurora/Aurora18.png" type="Texture" id=27]
[ext_resource path="res://Stages/Aurora/Resources/Aurora/Aurora19.png" type="Texture" id=28]
[ext_resource path="res://Stages/Aurora/Resources/Aurora/Aurora20.png" type="Texture" id=29]
[ext_resource path="res://Stages/Aurora/Resources/Aurora/Aurora21.png" type="Texture" id=30]
[ext_resource path="res://Stages/Aurora/Resources/Aurora/Aurora22.png" type="Texture" id=31]
[ext_resource path="res://Stages/Aurora/Wisp2Spawner.gd" type="Script" id=32]
[ext_resource path="res://Stages/Aurora/Resources/soft_platform.png" type="Texture" id=33]
[ext_resource path="res://Scenes/Stage/SoftPlatform.tscn" type="PackedScene" id=34]
[ext_resource path="res://Stages/Aurora/MPlatform1.gd" type="Script" id=35]
[ext_resource path="res://Stages/Aurora/MPlatform2.gd" type="Script" id=36]
[ext_resource path="res://Stages/Aurora/MPlatform3.gd" type="Script" id=37]

[sub_resource type="CanvasItemMaterial" id=3]
blend_mode = 1

[sub_resource type="SpriteFrames" id=2]
animations = [ {
"frames": [ ExtResource( 10 ), ExtResource( 11 ), ExtResource( 13 ), ExtResource( 12 ), ExtResource( 14 ), ExtResource( 25 ), ExtResource( 26 ), ExtResource( 23 ), ExtResource( 24 ), ExtResource( 15 ), ExtResource( 19 ), ExtResource( 20 ), ExtResource( 21 ), ExtResource( 16 ), ExtResource( 17 ), ExtResource( 22 ), ExtResource( 18 ), ExtResource( 27 ), ExtResource( 28 ), ExtResource( 29 ), ExtResource( 30 ), ExtResource( 31 ) ],
"loop": true,
"name": "default",
"speed": 10.0
} ]

[node name="Aurora" type="Node2D"]
script = ExtResource( 1 )

[node name="ParallaxBackground" type="ParallaxBackground" parent="."]

[node name="ParallaxLayer" type="ParallaxLayer" parent="ParallaxBackground"]
motion_scale = Vector2( 0.7, 0.7 )

[node name="Background" type="Sprite" parent="ParallaxBackground/ParallaxLayer"]
texture = ExtResource( 5 )

[node name="Aurora" type="AnimatedSprite" parent="ParallaxBackground/ParallaxLayer"]
material = SubResource( 3 )
position = Vector2( 95, -203 )
frames = SubResource( 2 )
frame = 20
playing = true

[node name="ShootingStarSpawner" type="ColorRect" parent="ParallaxBackground/ParallaxLayer"]
visible = false
modulate = Color( 1, 0, 0, 0.180392 )
margin_left = -448.0
margin_top = -448.0
margin_right = 448.0
script = ExtResource( 7 )

[node name="ParallaxLayer2" type="ParallaxLayer" parent="ParallaxBackground"]
motion_scale = Vector2( 0.9, 0.95 )

[node name="WispSpawner" type="ColorRect" parent="ParallaxBackground/ParallaxLayer2"]
visible = false
margin_left = -456.0
margin_top = -32.0
margin_right = 448.0
margin_bottom = 320.0
color = Color( 1, 0.984314, 0, 0.243137 )
script = ExtResource( 8 )

[node name="ParallaxLayer3" type="ParallaxLayer" parent="ParallaxBackground"]
motion_scale = Vector2( 0.8, 0.9 )

[node name="Wisp2Spawner" type="ColorRect" parent="ParallaxBackground/ParallaxLayer3"]
visible = false
margin_left = -448.0
margin_top = -32.0
margin_right = 448.0
margin_bottom = 320.0
color = Color( 1, 0.984314, 0, 0.243137 )
script = ExtResource( 32 )

[node name="MainPlatform" type="Sprite" parent="."]
position = Vector2( 0, 224 )
texture = ExtResource( 3 )

[node name="SolidPlatform" parent="MainPlatform" instance=ExtResource( 4 )]
visible = false
margin_left = -448.0
margin_top = -96.0
margin_right = 448.0
margin_bottom = 224.0

[node name="MPlatform1" type="Node2D" parent="."]
script = ExtResource( 35 )

[node name="MPlatform" type="Node2D" parent="MPlatform1"]
position = Vector2( -256, 48 )

[node name="Sprite" type="Sprite" parent="MPlatform1/MPlatform"]
position = Vector2( 0, 24 )
texture = ExtResource( 33 )

[node name="SoftPlatform" parent="MPlatform1/MPlatform" instance=ExtResource( 34 )]
visible = false
margin_left = -64.0
margin_top = -8.0
margin_right = 64.0
margin_bottom = 8.0

[node name="Waypoints" type="Node" parent="MPlatform1"]

[node name="A" type="Position2D" parent="MPlatform1/Waypoints"]
position = Vector2( -256, 48 )

[node name="B" type="Position2D" parent="MPlatform1/Waypoints"]
position = Vector2( -128, 48 )

[node name="MPlatform2" type="Node2D" parent="."]
script = ExtResource( 36 )

[node name="MPlatform" type="Node2D" parent="MPlatform2"]
position = Vector2( 256, 48 )

[node name="Sprite" type="Sprite" parent="MPlatform2/MPlatform"]
position = Vector2( 3.05176e-05, 24 )
texture = ExtResource( 33 )

[node name="SoftPlatform" parent="MPlatform2/MPlatform" instance=ExtResource( 34 )]
margin_left = -64.0
margin_top = -8.0
margin_right = 64.0
margin_bottom = 8.0

[node name="Waypoints" type="Node" parent="MPlatform2"]

[node name="A" type="Position2D" parent="MPlatform2/Waypoints"]
position = Vector2( 256, 48 )

[node name="B" type="Position2D" parent="MPlatform2/Waypoints"]
position = Vector2( 128, 48 )

[node name="MPlatform3" type="Node2D" parent="."]
script = ExtResource( 37 )

[node name="MPlatform" type="Node2D" parent="MPlatform3"]
position = Vector2( 0, 48 )

[node name="Sprite" type="Sprite" parent="MPlatform3/MPlatform"]
position = Vector2( 0, 24 )
texture = ExtResource( 33 )

[node name="SoftPlatform" parent="MPlatform3/MPlatform" instance=ExtResource( 34 )]
margin_left = -64.0
margin_top = -8.0
margin_right = 64.0
margin_bottom = 8.0

[node name="Waypoints" type="Node" parent="MPlatform3"]

[node name="A" type="Position2D" parent="MPlatform3/Waypoints"]
position = Vector2( 0, 48 )

[node name="B" type="Position2D" parent="MPlatform3/Waypoints"]
position = Vector2( 0, -32 )

[node name="P1_Position" type="Position2D" parent="."]
position = Vector2( -128, 128 )

[node name="P2_Position" type="Position2D" parent="."]
position = Vector2( 128, 128 )

[node name="MiddlePosition" type="Position2D" parent="."]
position = Vector2( 0, 128 )

[node name="StageBox" type="ReferenceRect" parent="."]
margin_left = -384.0
margin_top = -384.0
margin_right = 384.0
margin_bottom = 256.0
__meta__ = {
"_edit_lock_": true
}

[node name="BlastBarrierU" type="ColorRect" parent="StageBox"]
margin_left = -128.0
margin_top = -128.0
margin_right = 768.0
color = Color( 0, 0, 0, 1 )

[node name="BlastBarrierL" type="ColorRect" parent="StageBox"]
margin_left = -128.0
margin_top = -128.0
margin_bottom = 704.0
color = Color( 0, 0, 0, 1 )

[node name="BlastBarrierR" type="ColorRect" parent="StageBox"]
margin_left = 768.0
margin_top = -128.0
margin_right = 896.0
margin_bottom = 704.0
color = Color( 0, 0, 0, 1 )

[node name="RespawnPoints" type="Node2D" parent="."]
position = Vector2( 0, 32 )

[node name="RespawnPoint1" type="Position2D" parent="RespawnPoints"]
position = Vector2( -192, -64 )

[node name="RespawnPoint2" type="Position2D" parent="RespawnPoints"]
position = Vector2( -128, -128 )

[node name="RespawnPoint3" type="Position2D" parent="RespawnPoints"]
position = Vector2( -128, 40 )

[node name="RespawnPoint4" type="Position2D" parent="RespawnPoints"]
position = Vector2( 0, -168 )

[node name="RespawnPoint5" type="Position2D" parent="RespawnPoints"]
position = Vector2( 0, -96 )

[node name="RespawnPoint6" type="Position2D" parent="RespawnPoints"]
position = Vector2( 0, 40 )

[node name="RespawnPoint7" type="Position2D" parent="RespawnPoints"]
position = Vector2( 128, 40 )

[node name="RespawnPoint8" type="Position2D" parent="RespawnPoints"]
position = Vector2( 128, -128 )

[node name="RespawnPoint9" type="Position2D" parent="RespawnPoints"]
position = Vector2( 192, -64 )
